--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="backgroundParty">
     <img class="balloon1 balloon" src="./img/PNGkhothietke.net-02776.png" alt="">
     <img class="balloon2 balloon" src="./img/PNGkhothietke.net-02776.png" alt="">
-    <img class="bannerParty" src="./img/makeupspa-kit-theme-happy-birthday-bunting-paper-banner-party-supply-261454.png" alt="">
+    <img class="bannerParty" src="./img/hpbd.png" alt="">
     <div class="letterForm">
       <input type="checkbox" id="mess">
       <div class="content">
