--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <div class="backgroundParty">
     <img class="balloon1 balloon" src="./img/PNGkhothietke.net-02776.png" alt="">
+    <img class="balloon3 balloon" src="./img/banh.png" alt="">
     <img class="balloon2 balloon" src="./img/PNGkhothietke.net-02776.png" alt="">
     <img class="bannerParty" src="./img/hpbd.png" alt="">
     <div class="letterForm">
